--- a/index.html
+++ b/index.html
@@ -148,6 +148,28 @@
     </main>
     <section>
       <h2>Contacto</h2>
+      <form action="">
+        <fieldset>
+          <legend>Contáctanos llenando todos los campos</legend>
+          <div>
+            <label for="">Nombre</label>
+            <input type="text" placeholder="Nombre" />
+          </div>
+          <div>
+            <label for="">Teléfono</label>
+            <input type="tel" placeholder="Teléfono" />
+          </div>
+          <div>
+            <label for="">Correo</label>
+            <input type="email" placeholder="Tu Email" />
+          </div>
+          <div>
+            <label for="">Mensaje</label>
+            <textarea name="" id="" cols="30" rows="10"> </textarea>
+          </div>
+          <input type="submit" value="Enviar" />
+        </fieldset>
+      </form>
     </section>
     <footer>
       <p>Todos los derechos reservados. Regina Peláez Freelancer</p>
