--- a/index.html
+++ b/index.html
@@ -4,47 +4,58 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preload" href="src/normalize.css" as="style" />
+    <link rel="stylesheet" href="src/normalize.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Krub:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="preload" href="src/style.css" as="style" />
     <link rel="stylesheet" href="src/style.css" />
     <title>Diseñador Freelancer</title>
   </head>
   <body>
     <header>
-      <h1>Regina Peláez Freelancer</h1>
+      <h1 class="titulo">Regina Peláez Freelancer</h1>
     </header>
-    <nav>
-      <a href="#">Inicio</a>
-      <a href="#">Sobre Mi</a>
-      <a href="#">Clientes</a>
-      <a href="#">Contactos</a>
-    </nav>
-    <img src="img/hero.jpg" alt="" />
-    <section>
-      <h2>Diseño y Desarrollo Web Freelancer</h2>
+    <div class="nav-bg">
+      <nav class="navegador-principal contenedor">
+        <a href="#">Inicio</a>
+        <a href="#">Sobre Mi</a>
+        <a href="#">Clientes</a>
+        <a href="#">Contactos</a>
+      </nav>
+    </div>
+    <div class="primera-seccion">
+      <section>
+        <h2>Diseño y Desarrollo Web Freelancer</h2>
 
-      <p>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="icon icon-tabler icon-tabler-map-pin"
-          width="52"
-          height="52"
-          viewBox="0 0 24 24"
-          stroke-width="2"
-          stroke="#ffbf00"
-          fill="none"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-        >
-          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-          <circle cx="12" cy="11" r="3" />
-          <path
-            d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z"
-          />
-        </svg>
-      </p>
-      <p>Ciudad de México</p>
-      <a href="#">Contactanos</a>
-    </section>
+        <p>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="icon icon-tabler icon-tabler-map-pin lugar"
+            width="52"
+            height="52"
+            viewBox="0 0 24 24"
+            stroke-width="2"
+            stroke="#ffbf00"
+            fill="none"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+            <circle cx="12" cy="11" r="3" />
+            <path
+              d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z"
+            />
+          </svg>
+        </p>
+        <p class="ciudad">Ciudad de México</p>
+        <a href="#">Contactanos</a>
+      </section>
+    </div>
     <main>
       <h2>Mis Servicios</h2>
       <section>
