Agregar el CSS de la parte intermedia
Se agrego la imagen de fondo junto con el css para esta sección, con el código para el botón y la ubicación

--- a/index.html
+++ b/index.html
@@ -28,19 +28,18 @@
         <a href="#">Contactos</a>
       </nav>
     </div>
-    <div class="primera-seccion">
-      <section>
+    <section class="primera-seccion">
+      <div class="contenido-seccion">
         <h2>Diseño y Desarrollo Web Freelancer</h2>
-
-        <p>
+        <div class="ubicacion">
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="icon icon-tabler icon-tabler-map-pin lugar"
-            width="52"
-            height="52"
+            class="icon icon-tabler icon-tabler-map-pin"
+            width="88"
+            height="88"
             viewBox="0 0 24 24"
-            stroke-width="2"
-            stroke="#ffbf00"
+            stroke-width="1.5"
+            stroke="#FFC107"
             fill="none"
             stroke-linecap="round"
             stroke-linejoin="round"
@@ -51,11 +50,11 @@
               d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z"
             />
           </svg>
-        </p>
-        <p class="ciudad">Ciudad de México</p>
-        <a href="#">Contactanos</a>
-      </section>
-    </div>
+          <p>Ciudad de México</p>
+        </div>
+        <a class="boton" href="#">Contactanos</a>
+      </div> <!-- contenido-seccion -->
+    </section>
     <main>
       <h2>Mis Servicios</h2>
       <section>
