--- a/index.html
+++ b/index.html
@@ -167,33 +167,37 @@
         </section>
       </div>
       <!-- servicios -->
-      <section>
+      <section class="contact">
         <h2 class="contacto">Contacto</h2>
         <form class="formulario" action="">
           <fieldset>
             <legend>Contáctanos llenando todos los campos</legend>
-            <div class="campo">
-              <label for="">Nombre</label>
-              <input type="text" placeholder="Nombre" />
+            <div class="contenedor-campos">
+              <div class="campo">
+                <label for="">Nombre</label>
+                <input class="input-text" type="text" placeholder="Nombre" />
+              </div>
+              <div class="campo">
+                <label for="">Teléfono</label>
+                <input class="input-text" type="tel" placeholder="Teléfono" />
+              </div>
+              <div class="campo">
+                <label for="">Correo</label>
+                <input class="input-text" type="email" placeholder="Tu Email" />
+              </div>
+              <div class="campo">
+                <label for="">Mensaje</label>
+                <textarea class="input-text"> </textarea>
+              </div> <!--contenedor-campos-->
             </div>
-            <div class="campo">
-              <label for="">Teléfono</label>
-              <input type="tel" placeholder="Teléfono" />
+            <div class="alinear-derecha flex">
+            <input class="boton w-100" type="submit" value="Enviar" />
             </div>
-            <div class="campo">
-              <label for="">Correo</label>
-              <input type="email" placeholder="Tu Email" />
-            </div>
-            <div class="campo">
-              <label for="">Mensaje</label>
-              <textarea name="" id="" cols="30" rows="10"> </textarea>
-            </div>
-            <input class="boton" type="submit" value="Enviar" />
           </fieldset>
         </form>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <p>Todos los derechos reservados. Regina Peláez Freelancer</p>
     </footer>
   </body>
