--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       </section>
     </main>
     <footer class="footer">
-      <p>Todos los derechos reservados. Regina Peláez Freelancer</p>
+      <p>Todos los derechos reservados. <a class="gitHub" href="https://github.com/RenjiYeyi/Pagina-Freelancer"> Regina Peláez</a> Freelancer</p>
     </footer>
   </body>
 </html>
