--- a/index.html
+++ b/index.html
@@ -188,17 +188,24 @@
               <div class="campo">
                 <label for="">Mensaje</label>
                 <textarea class="input-text"> </textarea>
-              </div> <!--contenedor-campos-->
+              </div>
+              <!--contenedor-campos-->
             </div>
             <div class="alinear-derecha flex">
-            <input class="boton w-100" type="submit" value="Enviar" />
+              <input class="boton w-100" type="submit" value="Enviar" />
             </div>
           </fieldset>
         </form>
       </section>
     </main>
     <footer class="footer">
-      <p>Todos los derechos reservados. <a class="gitHub" href="https://github.com/RenjiYeyi/Pagina-Freelancer"> Regina Peláez</a> Freelancer</p>
+      <p>
+        Todos los derechos reservados.
+        <a class="gitHub" href="https://github.com/RenjiYeyi/Pagina-Freelancer">
+          Regina Peláez</a
+        >
+        Freelancer
+      </p>
     </footer>
   </body>
 </html>
